# yolov8-pose_openvino

./: CMakeLists.txt  LICENSE
include/yolov8/: yolov8.hpp
src/: example.cpp  yolov8.cpp
